--- a/.github/workflows/deploy-to-eks.yml
+++ b/.github/workflows/deploy-to-eks.yml
@@ -20,6 +20,12 @@ on:
           - staging
           - production
 
+permissions:
+  id-token: write
+  contents: read
+  deployments: write
+  packages: read
+
 env:
   CLUSTER_NAME: ${{ github.event.client_payload.cluster_name || 'vanillatstodo-cluster' }}
   AWS_REGION: "us-east-2"
@@ -33,10 +39,17 @@ jobs:
       github.event_name == 'workflow_dispatch' ||
       github.event_name == 'repository_dispatch' ||
       (github.event_name == 'workflow_run' && github.event.workflow_run.conclusion == 'success')
-    environment: ${{ env.ENVIRONMENT }}
+    environment:
+      name: ${{ env.ENVIRONMENT }}
+      url: ${{ env.SERVICE_URL }}
+
     steps:
       - name: Checkout repository
         uses: actions/checkout@v3
+
+      - name: Load Environment Variables
+        run: |
+          cat .github/variables/environment.env >> $GITHUB_ENV
 
       - name: Configure AWS credentials
         uses: aws-actions/configure-aws-credentials@v4
@@ -44,6 +57,13 @@ jobs:
           aws-access-key-id: ${{ secrets.AWS_ACCESS_KEY_ID }}
           aws-secret-access-key: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
           aws-region: ${{ env.AWS_REGION }}
+
+      - name: Save Current Deployment
+        run: |
+          if kubectl get deployment vanillatstodo &>/dev/null; then
+            echo "📦 Saving current deployment state..."
+            kubectl get deployment vanillatstodo -o yaml > previous_deployment.yaml
+          fi
 
       - name: Install kubectl
         run: |
@@ -126,6 +146,27 @@ jobs:
             sleep 15
           done
 
+      - name: Verify Application Health
+        id: health_check
+        run: |
+          echo "⏳ Checking application health..."
+          for i in {1..10}; do
+            if curl -sf ${SERVICE_URL}/health; then
+              echo "✅ Application is healthy"
+              echo "health_status=healthy" >> $GITHUB_OUTPUT
+              break
+            fi
+            echo "⏳ Waiting for application to be ready... (${i}/10)"
+            sleep 30
+          done
+
+      - name: Rollback on Failure
+        if: failure() && hashFiles('previous_deployment.yaml') != ''
+        run: |
+          echo "🔄 Rolling back deployment..."
+          kubectl apply -f previous_deployment.yaml
+          kubectl rollout status deployment/vanillatstodo --timeout=5m
+
       - name: Deployment Summary
         if: always()
         run: |
@@ -137,6 +178,8 @@ jobs:
           echo "| Service URL | ${{ env.SERVICE_URL || 'N/A' }} | LoadBalancer |" >> $GITHUB_STEP_SUMMARY
           echo "| Image | ✅ | ${{ env.DOCKER_IMAGE }} |" >> $GITHUB_STEP_SUMMARY
           echo "| Cluster Endpoint | ${{ env.CLUSTER_ENDPOINT }} | API Server |" >> $GITHUB_STEP_SUMMARY
+          echo "| Health Check | ${{ steps.health_check.outputs.health_status || 'N/A' }} |" >> $GITHUB_STEP_SUMMARY
+          echo "| Rollback Status | ${{ job.status == 'failure' && hashFiles('previous_deployment.yaml') != '' && 'Applied' || 'Not Required' }} |" >> $GITHUB_STEP_SUMMARY
 
     # - name: Create Route 53 Record
     #   run: |
