--- a/k8s/vanillatstodo_service.yml
+++ b/k8s/vanillatstodo_service.yml
@@ -2,6 +2,14 @@ apiVersion: v1
 kind: Service
 metadata:
   name: vanillatstodo
+  labels:
+    app: vanillatstodo
+    environment: staging
+  annotations:
+    service.beta.kubernetes.io/aws-load-balancer-type: "nlb"
+    service.beta.kubernetes.io/aws-load-balancer-cross-zone-load-balancing-enabled: "true"
+    service.beta.kubernetes.io/aws-load-balancer-connection-draining-enabled: "true"
+    service.beta.kubernetes.io/aws-load-balancer-connection-draining-timeout: "60"
 spec:
   selector:
     app: vanillatstodo
@@ -10,3 +18,5 @@ spec:
       port: 80
       targetPort: 80
   type: LoadBalancer #if I won't use Ingress API: LoadBalancer
+  sessionAffinity: None
+  externalTrafficPolicy: Local
